# safe_llvm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: issue.md
.github/README_TEMPLATE/: README.md
.github/workflows/: ci.yml
.github/worksflows/: ci.yml
analysis/: Cargo.toml  README.md
analysis/src/: lib.rs  validator.rs
common/: Cargo.toml  README.md
common/src/: constants.rs  cstring.rs  io.rs  lib.rs  pointer.rs  target.rs  write_ir.rs
dev_toolchain/: Cargo.toml
dev_toolchain/src/: debugger.rs  logger.rs  main.rs
ir/: Cargo.toml  README.md
ir/src/: block.rs  builder.rs  core.rs  lib.rs  types.rs  values.rs  var.rs  variables.rs
ir/tests/: block_tests.rs  builder_tests.rs  init_tests.rs  ops_tests.rs  top_level_exp_tests.rs  types_tests.rs  values_tests.rs  var_tests.rs
jit/: Cargo.toml  README.md
jit/src/: core.rs  execution_engine.rs  lib.rs  mod.rs
jit/tests/: arg_type_tests.rs  return_type_tests.rs  target_tests.rs  targeting_tests.rs
logging/: Cargo.toml  README.md
logging/src/: core.rs  lib.rs
src/: api.rs  interface.rs  lib.rs  router.rs
src/analysis/: mod.rs  validator.rs
src/api/: api_definition.rs  api_safe.rs  mod.rs
src/common/: cstring.rs  mod.rs  pointer.rs  write_ir.rs
src/ee_lib/: init_ee.rs  mod.rs  utils.rs
src/init/: context.rs  mod.rs  module.rs
src/ir/: api.rs  block.rs  builder.rs  core.rs  init.rs  mod.rs  operations.rs  ops.rs  router.rs  top_level_exp.rs  types.rs  values.rs  var.rs
src/ir_codegen/: api.rs  (+9 more)
tests/: mod.rs
(+50 files in other folders)
