[package]
name = "safe_llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-sys = "170"
mockall = "0.10.2"
slog = "2.7"
slog-async = "2.6"
slog-term = "2.8"
slog-json = "2.4"

[dev-dependencies]
llvm-sys = "170"
mockall = "0.10.2"
slog = "2.7"
slog-async = "2.6"
slog-term = "2.8"
slog-json = "2.4"